[gd_scene load_steps=5 format=3 uid="uid://7suj5bg7fewv"]

[ext_resource type="Script" path="res://Level 8 Diag.gd" id="1_vwi8s"]
[ext_resource type="Texture2D" uid="uid://7xf4geqw6054" path="res://VisualNovel/dialogRoboter.png" id="2_xkpfj"]
[ext_resource type="Texture2D" uid="uid://cbajqfd3o545a" path="res://bosesGras1.png" id="3_vowic"]
[ext_resource type="Texture2D" uid="uid://bxe230hk07ay4" path="res://VisualNovel/paper.png" id="4_3l4t3"]

[node name="Level 8" type="Node2D"]

[node name="Level 8 Diag" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 476.0
offset_right = 1075.0
offset_bottom = 617.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vwi8s")

[node name="DialogRoboterLevel8" type="Sprite2D" parent="Level 8 Diag"]
visible = false
position = Vector2(165, -89)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_xkpfj")

[node name="BosesGras1Level8" type="Sprite2D" parent="Level 8 Diag"]
position = Vector2(934, -69)
scale = Vector2(0.13, 0.13)
texture = ExtResource("3_vowic")

[node name="TextureRect" type="TextureRect" parent="Level 8 Diag"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_3l4t3")
expand_mode = 1

[node name="Level8Text" type="Label" parent="Level 8 Diag"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 11.0
offset_right = -337.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.47, 1.47)
autowrap_mode = 3
